--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -34,5 +34,5 @@ jobs:
           pip install -e .
           
       - name: Run unit tests
-        run: python -m pytest --import-mode=append tests/
+        run: pytest --import-mode=append tests/
         
