--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -33,5 +33,5 @@ jobs:
           pip install -r requirements.txt
           
       - name: Run unit tests
-        run:  python -m tests/
+        run:  python -m tests
         
