--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,9 +10,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
     - name: Build the Docker image
-    - env:
+      uses: actions/checkout@v3
+   
+    - name: Build, tag, and push image to Amazon ECR
+      env:
        solutions_env: TRUE
        IMAGE_TAG: latest
       run: |
