--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,10 +13,10 @@ jobs:
     - name: Build the Docker image
       uses: actions/checkout@v3
    
-    - name: Build, tag, and push image to Amazon ECR
+    - name: Build image and run unit tests
       env:
        solutions_env: TRUE
        IMAGE_TAG: latest
       run: |
            docker build -f test.Dockerfile  -t test_tag:${IMAGE_TAG} .
-           docker run -it test_tag:${IMAGE_TAG}
+           docker run test_tag:${IMAGE_TAG}
