--- a/.github/workflows/copy_files.yml
+++ b/.github/workflows/copy_files.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: AdamLang96/DestDir
-          token: $ {{ secrets.BOT_TOKEN }}
+          token: $ {{ secrets.GITHUB_TOKEN }}
           persist-credentials: true
           path: challenges
           
