--- a/.github/workflows/copy_files.yml
+++ b/.github/workflows/copy_files.yml
@@ -15,7 +15,7 @@ jobs:
         API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
       with:
         source_file: 'challenges'
-        destination_repo: 'AdamLang96DestDir'
+        destination_repo: 'AdamLang96/DestDir'
         destination_folder: 'challenges'
         user_email: 'adamglang96@gmail.com'
         user_name: 'AdamLang96'
