--- a/.github/workflows/copy_tests.yml
+++ b/.github/workflows/copy_tests.yml
@@ -17,4 +17,6 @@ jobs:
         source_file: 'tests'
         destination_repo: 'AdamLang96/DestDir'
         destination_folder: 'test'
+        user_email: 'codesmith@codesmith.io'
+        user_name: 'codesmith
 
