--- a/.github/workflows/copy_tests.yml
+++ b/.github/workflows/copy_tests.yml
@@ -18,5 +18,5 @@ jobs:
         destination_repo: 'AdamLang96/DestDir'
         destination_folder: 'test'
         user_email: 'codesmith@codesmith.io'
-        user_name: 'codesmith
+        user_name: 'codesmith'
 
